--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
-    "styled-components": "^6.0.0-rc.5",
+    "styled-components": "^5.3.11",
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
@@ -22,8 +22,8 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@types/styled-system": "^5.1.16",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
