--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "styled-components": "^5.3.11",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
